# art-timelapse

./: .gitignore  LICENSE  README.md  art_timelapse.py  art_timelapse.spec  build_local.py  build_windows.ps1  flake.nix  main.py  pyinstaller_main.py  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: python-build-exe.yml
po/: ja_JP.po
src/art_timelapse/: __init__.py  art_timelapse.py  asynctk.py  gui.py  main.py  sai.py  timelapse.py
