[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "art-timelapse"
version = "1.3.1"
authors = [
    { name = "cromachina" }
]
license = 'MIT'
description = "Create timelapses of art programs."
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    'numpy',
    'opencv-python',
    'pillow',
    'psd_tools',
    'pynput',
    'pywinctl',
    'tqdm',
    'watchdog',
    'mss',
    'psutil',
    'pymemoryeditor',
]

[project.optional-dependencies]
dev = [
    "pyinstaller",
]

[project.urls]
"Homepage" = "https://github.com/cromachina/art-timelapse"

[project.scripts]
art-timelapse = "art_timelapse.art_timelapse:main"

[tool.setuptools.packages.find]
where = ["src"]
